--- a/src/styles/particles.css
+++ b/src/styles/particles.css
@@ -27,11 +27,23 @@
     width: 10px;
     height: 10px;
     background-color: #fff; 
-    clip-path: polygon(50% 0%, 61.8% 38.2%, 100% 49.1%, 76.4% 79.1%, 82.6% 100%, 50% 88.2%, 17.4% 100%, 23.6% 79.1%, 0% 49.1%, 38.2% 38.2%);
-    animation: move 10s linear infinite, fade 2s ease-in-out infinite;
+    clip-path: polygon(
+      50% 0%,
+      61.8% 38.2%,
+      100% 38.2%,
+      68.2% 61.8%,
+      79.1% 100%,
+      50% 79.1%,
+      20.9% 100%,
+      31.8% 61.8%,
+      0% 38.2%,
+      38.2% 38.2%
+    );
+    animation: move 20s linear infinite, fade 2s ease-in-out infinite;
     opacity: 0; 
     z-index: 0;
   }
+  
   
   @keyframes move {
     0% {
